--- a/assets/css/dashforge.css
+++ b/assets/css/dashforge.css
@@ -41075,3 +41075,12 @@ a.bg-twitter:hover, a.bg-twitter:focus, button.bg-twitter:hover, button.bg-twitt
 .ui-datepicker{
   padding:0px !important;
 }
+
+.dropzone {
+  min-height: 150px;
+  border: 2px dashed #0087F7;
+  border-radius: 5px;
+  background: white;
+  padding: 54px 54px;
+  margin-top: 80px;
+}
